force-app/main/default/objects/Timesheet_Line__c/Timesheet_Line__c.object-meta.xml
<CustomObject>
    <label>Timesheet Line</label>
    <nameField>
        <displayFormat>TLN-{00000}</displayFormat>
        <label>Timesheet Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheet Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>