force-app/main/default/objects/Timesheet_Line__c/fields/Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked__c</fullName>
    <label>Hours Worked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>