force-app/main/default/objects/Timesheet_Line__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Timesheet Lines</relationshipLabel>
    <relationshipName>Timesheet_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>